# hmt-basemodels

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  Pipfile  README.md  docker-compose.yml  pyproject.toml  setup.py  test.py  yapf.cfg
.github/workflows/: codeql-analysis.yml
basemodels/: __init__.py  constants.py  groundtruth.py  helpers.py  manifest.py  streaming_json.py  taskdata.py  utils.py  vgg.py  via.py
basemodels/manifest/: __init__.py  manifest.py  restricted_audience.py  utils.py
basemodels/manifest/data/: __init__.py  groundtruth.py  helpers.py  preprocess.py  requester_question_example.py  requester_restricted_answer_set.py  taskdata.py
basemodels/pydantic/: __init__.py  utils.py  via.py
basemodels/pydantic/manifest/: __init__.py  manifest.py  restricted_audience.py
basemodels/pydantic/manifest/data/: __init__.py  groundtruth.py  preprocess.py  requester_question_example.py  requester_restricted_answer_set.py  taskdata.py
basemodels/support/schematics/manifest/: manifest.py
tests/: both_models.py  test_core.py  test_manifest_validation.py  test_preprocess.py  test_pydantic.py  test_pydantic_preprocess.py  test_restricted_answer_set.py  test_utils.py
