[tool.poetry]
name = "hmt-basemodels"
version = "0.2.9"
description = ""
authors = ["Intuition Machines, Inc <support@hcaptcha.com>"]
packages = [
    { include = "basemodels" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
pydantic = "^2.5.3"

[tool.poetry.dev-dependencies]
httpretty = "^1.0.5"
mypy = "^0.812"
yapf = "^0.31.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
